# friends-birthday-reminder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: token.example.json
data/: attendees.example.csv  birthdays.example.csv
src/: app.py
