[project]
name = "friends-birthday-reminder"
version = "0.1.0"
description = "A Python script that reads friend birthday data from a CSV file and creates recurring yearly Google Calendar events with email/popup reminders."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "google-api-python-client==2.190.0",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.2.4",
]